# lmsv1

./: .env.example  .env.qa  .env.staging.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  ROADMAP.md  create_super_admin.py  deploy.bat  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.staging.yml  docker-compose.yml  fix_bom.ps1  fix_docker_config.ps1  fix_theory_final.py  module1_heart_of_algebra.py  render.yaml  sat_math_pro_course_html.json  sat_math_pro_course_html_fixed.json  seed_demo_course.py  seed_english_course.py  seed_game_levels.py  seed_hetzner_robot.py  seed_local_courses.py  seed_local_test.py  seed_pro_courses.py  seed_prod_courses.py  seed_sat_math_v3.py  seed_sat_math_v4.py  seed_v2_courses.py  stop-prod.bat  test_course_final.py  test_debug.py  test_nginx.ps1  test_publish.py  (+3 more)
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1df0cb77550c_add_assignments_learning_paths_password_.py  8327192f0196_add_live_lessons.py  a1b2c3d4e5f6_add_game_exercise_types.py  a2b3c4d5e6f7_add_gdpr_consent_fields.py  a3b4c5d6e7f8_add_room_placed.py  (+39 more)
backend/app/: config.py  logging_config.py  main.py  scheduler.py
backend/tests/: conftest.py  test_admin.py  test_age_gate_consent.py  test_analytics_dashboards.py  test_analytics_v2_extras.py  test_assessments.py  test_assignments.py  test_attendance.py  test_auth.py  test_certificates_api.py  test_child_safety.py  test_collaboration.py  test_courses.py  test_cross_org_isolation.py  test_curriculum_pacing.py  test_donations.py  test_exercises.py  test_export.py  test_feedback.py  test_gamification.py  test_groups_scheduling.py  test_journal.py  test_live_drafts.py  test_live_lessons.py  test_live_realtime.py  test_live_sse.py  test_math_validation.py  test_meetings.py  test_misc.py  test_normalize_lesson_content.py  test_p0_security.py  test_parent.py  test_peer_review.py  test_profanity.py  test_progress.py  test_purge_unconfirmed_consent.py  test_quiz_breakdown.py  test_rbac.py  test_room.py  test_rooms.py  (+11 more)
mcp-grasslms/: README.md  pyproject.toml
(+986 files in other folders)
