[project]
name = "lms-backend"
version = "0.1.0"
description = "LMS SaaS Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.12",
    "stripe>=11.0.0",
    "httpx>=0.28.0",
    "python-slugify>=8.0.4",
    "email-validator>=2.1.0",
    "slowapi>=0.1.9",
    "sentry-sdk[fastapi]>=2.18.0",
    "apscheduler>=3.10.0",
    "structlog>=24.4.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
# Baseline ignores as of CI introduction (2026-04-10). These are existing-code
# style issues, not bugs, and fixing them is a separate cleanup pass. New rules
# (other E/F/I/N/W) still apply to new code and gate CI.
#   E501  102 instances of long lines — cosmetic, not worth churning
#   E712  7 instances of `== True`/`== False` — required for SQLAlchemy filter
#         expressions where `is True` generates different SQL
#   F841  4 instances of unused locals — mostly in test fixtures, minor
#   E741  3 instances of `l` loop var — cosmetic, not bugs
extend-ignore = ["E501", "E712", "F841", "E741"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
